--- a/SCSS/styles.scss
+++ b/SCSS/styles.scss
@@ -116,7 +116,7 @@ $color-footer: rgb(197, 99, 60);
 
 .section-divider {
     margin: 40px 0;
-    border: 1px solid #ef4cec; 
+    border: 1px solid teal; 
   }
   
   .text-justify {
@@ -131,6 +131,7 @@ $color-footer: rgb(197, 99, 60);
       font-weight: bold;
     }
   }
+
   
   /* Pagina Contactanos */
   
