--- a/Views/contacto.html
+++ b/Views/contacto.html
@@ -111,7 +111,7 @@
               
               <div class="col-md-2">
                 <h6 class="text-uppercase font-weight-bold">
-                  <a href="#!" class="text-white underline">CONTACTANOS</a>
+                  <a href="#" class="text-white underline">CONTACTANOS</a>
                 </h6>
               </div>
           </div>
