--- a/Views/curiosidades.html
+++ b/Views/curiosidades.html
@@ -95,7 +95,7 @@
     
                   <div class="col-md-2">
                     <h6 class="text-uppercase font-weight-bold">
-                      <a href="#!" class="text-white underline">DATOS CURIOSOS</a>
+                      <a href="#" class="text-white underline">DATOS CURIOSOS</a>
                     </h6>
                   </div>
     
