--- a/Views/nasa.html
+++ b/Views/nasa.html
@@ -128,7 +128,7 @@
 
               <div class="col-md-2">
                 <h6 class="text-uppercase font-weight-bold">
-                  <a href="#!" class="text-white underline">NASA</a>
+                  <a href="#" class="text-white underline">NASA</a>
                 </h6>
               </div>
               
