--- a/Views/planetas.html
+++ b/Views/planetas.html
@@ -156,7 +156,7 @@
   
                 <div class="col-md-2">
                   <h6 class="text-uppercase font-weight-bold">
-                    <a href="#!" class="text-white underline">PLANETAS</a>
+                    <a href="#" class="text-white underline">PLANETAS</a>
                   </h6>
                 </div>
   
