arreglo para mobile first

--- a/SCSS/styles.scss
+++ b/SCSS/styles.scss
@@ -356,3 +356,9 @@ $color-1: rgb(219, 177, 59);
       }
     }
   }
+
+  @media screen and (max-width: 320px) {
+    .videoBackground {
+      display: none; /* Oculta la sección que contiene el video */
+    }
+  }
