--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -349,6 +350,11 @@ input[type=submit]:hover {
   .tituloPlanetas p {
     font-size: small;
     text-align: justify;
+  }
+}
+@media screen and (max-width: 320px) {
+  .videoBackground {
+    display: none; /* Oculta la sección que contiene el video */
   }
 }
 
