--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -351,10 +350,13 @@ input[type=submit]:hover {
     font-size: small;
     text-align: justify;
   }
-}
-@media screen and (max-width: 320px) {
   .videoBackground {
-    display: none; /* Oculta la sección que contiene el video */
+    display: none;
+  }
+  .videoBackground {
+    background-image: url("../Imagenes/planets.jpg");
+    background-size: cover;
+    background-position: center center;
   }
 }
 
