--- a/css/styles.css
+++ b/css/styles.css
@@ -336,18 +336,18 @@ input[type=submit]:hover {
   }
 }
 @media only screen and (min-width: 320px) and (max-width: 768px) {
+  p {
+    margin: 3px;
+    font-size: small;
+    padding: auto;
+  }
   article {
     padding: 15px;
   }
   .introPlanetas, .seccionUltimaPlanetas {
     padding: 15px;
   }
-  .introPlanetas p, .seccionUltimaPlanetas p {
-    margin: 3px;
-    font-size: small;
-  }
   .tituloPlanetas p {
-    font-size: small;
     text-align: justify;
   }
   .videoBackground {
