cambios iconos footer

--- a/SCSS/styles.scss
+++ b/SCSS/styles.scss
@@ -364,5 +364,11 @@ $color-1: rgb(219, 177, 59);
       background-size: cover;
       background-position: center center;
     }
+
+    .espacio{
+      a{
+        padding: 12px;
+      }
+    }
   }
 
