--- a/Views/planetas.html
+++ b/Views/planetas.html
@@ -198,7 +198,7 @@
           
       
             <!-- Section: Social -->
-          <section class="text-center mb-5">
+          <section class="text-center mb-5 espacio">
               <a href="https://www.facebook.com/?locale=es_LA" class="text-white" >
                 <i class="fab fa-facebook-f svg-white">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
