--- a/Views/curiosidades.html
+++ b/Views/curiosidades.html
@@ -43,44 +43,68 @@
     </header>
 
     <div class="container text-center">
-        <section class="mosaicoTitulo mt-5">
-        <h1>¿Te quedaste con ganas de saber más?</h1>
-        <p>Te dejamos algunos videos interesantes sobre nuestro sistema solar</p>
-        </section>
-        <section class="mt-5">
-        <div class="d-flex flex-wrap justify-content-center mosaicoVideos">
-            <div class="video-fondo mb-3">
-            <iframe width="280" height="157.5" src="https://www.youtube.com/embed/S8GgSUzzTiA"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
-            </div>
-            <div class="video-fondo mb-3">
-            <iframe width="280" height="157.5" src="https://www.youtube.com/embed/npwbweBFH7A"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
-            </div>
-            <div class="video-fondo mb-3">
-            <iframe width="280" height="157.5" src="https://www.youtube.com/embed/ZUI9egonXeM"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
-            </div>
-        </div>
-        </section>
+      <section class="mosaicoTitulo mt-5">
+          <h1>¿Te quedaste con ganas de saber más?</h1>
+          <p>Te dejamos algunos videos interesantes sobre nuestro sistema solar</p>
+      </section>
+
+      <section class="mt-5">
+          <div class="d-flex flex-wrap justify-content-center mosaicoVideos">
+              <!-- Primer conjunto de videos -->
+              <div class="video-fondo mb-3">
+                  <iframe width="280" height="157.5" src="https://www.youtube.com/embed/S8GgSUzzTiA"
+                      title="YouTube video player" frameborder="0"
+                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                      allowfullscreen></iframe>
+              </div>
+              <div class="video-fondo mb-3">
+                  <iframe width="280" height="157.5" src="https://www.youtube.com/embed/npwbweBFH7A"
+                      title="YouTube video player" frameborder="0"
+                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                      allowfullscreen></iframe>
+              </div>
+              <div class="video-fondo mb-3">
+                  <iframe width="280" height="157.5" src="https://www.youtube.com/embed/ZUI9egonXeM"
+                      title="YouTube video player" frameborder="0"
+                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                      allowfullscreen></iframe>
+              </div>
+          </div>
+      </section>
+
+      <section class="mt-5">
+          <div class="d-flex flex-wrap justify-content-center mosaicoVideos">
+              <!-- Segundo conjunto de videos -->
+              <div class="video-fondo mb-3">
+                  <iframe width="280" height="157.5" src="https://www.youtube.com/embed/2KGVXMaft6w?si=_WAxwUC4iKqFfxPn"
+                      title="YouTube video player" frameborder="0"
+                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                      allowfullscreen></iframe>
+              </div>
+              <div class="video-fondo mb-3">
+                  <iframe width="280" height="157.5" src="https://www.youtube.com/embed/Ijxgo8UA3QU?si=ILrlHQ68TlcCCQTz"
+                      title="YouTube video player" frameborder="0"
+                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                      allowfullscreen></iframe>
+              </div>
+              <div class="video-fondo mb-3">
+                  <iframe width="280" height="157.5" src="https://www.youtube.com/embed/7wuQGY1B9aI?si=y3GCBZKYkZfT-MSe"
+                      title="YouTube video player" frameborder="0"
+                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                      allowfullscreen></iframe>
+              </div>
+          </div>
+      </section>
     </div>
+
+   
     
     <div>
-
       <footer class="text-center text-white" style="background-color: rgb(19, 95, 95)">
-
         <div class="container">
-              <!-- Section: Links -->
+              <!--links de la pagina-->
           <section class="mt-5">
-                
             <div class="row text-center d-flex justify-content-center pt-5">
-    
                   <div class="col-md-2">
                     <h6 class="text-uppercase font-weight-bold">
                       <a href="../index.html" class="text-white underline">INICIO</a>
@@ -113,10 +137,8 @@
               </div>
             </section>
               
-        
             <hr class="my-5" />
-        
-              <!-- Section: Text -->
+              <!-- Section de texto-->
             <section class="mb-5">
                 <div class="row d-flex justify-content-center">
                   <div class="col-lg-8">
@@ -129,8 +151,7 @@
                 </div>
             </section>
             
-        
-              <!-- Section: Social -->
+              <!-- Section Social -->
             <section class="text-center mb-5 espacio" >
                 <a href="https://www.facebook.com/?locale=es_LA" class="text-white" >
                   <i class="fab fa-facebook-f svg-white">
@@ -179,7 +200,6 @@
                 </a>
     
             </section>
-              
           </div>
           
             <!-- Copyright -->
