--- a/Views/planetas.html
+++ b/Views/planetas.html
@@ -57,21 +57,22 @@
 
     <section class="introPlanetas">
         <div data-aos="zoom-in">
-        <p>
-            El Sistema Solar se formó hace unos 4670 millones de años a partir de una nube de gas y de polvo que formó la 
+        <p>El Sistema Solar se formó hace unos 4670 millones de años a partir de una nube de gas y de polvo que formó la 
             estrella central y un disco circunstelar. La estructura actual de nuestro sistema solar con los planetas rocosos 
             interiores como la Tierra o Marte y la formación de planetas gigantes exteriores como Júpiter o Saturno nos habla 
-            de los procesos físicos que tuvieron lugar en aquella época y que esculpieron nuestro sistema planetario. 
-            Paralelamente los astrofísicos están obteniendo un número creciente de observaciones de discos semejantes alrededor
-            de estrellas muy jóvenes que permiten estudiar en directo la formación  de planetas en esas estrellas. 
-            En nuestro Sistema Solar los planetas exteriores (los gigantes gaseosos Júpiter y Saturno y los gigantes
-            helados Urano y Neptuno) se formaron rápidamente debido a la abundancia de materiales ligeros adquiriendo 
-            suficiente masa para atraer el gas hidrógeno de la nebuloso protosolar y dominar gravitacionalmente su entorno. 
-            Los planetas interiores tardaron mucho más tiempo en formarse debido a la menor cantidad de material condensable 
-            en las condiciones de temperatura del Sistema Solar interior estimándose una escala de tiempo de unos 50-100 
-            millones de años para completar la formación del Sistema Solar interior. La formación del sistema solar interior 
-            estuvo dominada por violentas colisiones entre miles de protoplanetas y billones de planetesimales mucho más 
-            pequeños.
+            de los procesos físicos que tuvieron lugar en aquella época y que esculpieron nuestro sistema planetario.  
+        </p>
+        <p>Paralelamente los astrofísicos están obteniendo un número creciente de observaciones de discos semejantes alrededor
+          de estrellas muy jóvenes que permiten estudiar en directo la formación  de planetas en esas estrellas. 
+          En nuestro Sistema Solar los planetas exteriores (los gigantes gaseosos Júpiter y Saturno y los gigantes
+          helados Urano y Neptuno) se formaron rápidamente debido a la abundancia de materiales ligeros adquiriendo 
+          suficiente masa para atraer el gas hidrógeno de la nebuloso protosolar y dominar gravitacionalmente su entorno.
+        </p>
+        <p>Los planetas interiores tardaron mucho más tiempo en formarse debido a la menor cantidad de material condensable 
+          en las condiciones de temperatura del Sistema Solar interior estimándose una escala de tiempo de unos 50-100 
+          millones de años para completar la formación del Sistema Solar interior. La formación del sistema solar interior 
+          estuvo dominada por violentas colisiones entre miles de protoplanetas y billones de planetesimales mucho más 
+          pequeños.
         </p>
         </div>
     </section>
