--- a/css/styles.css
+++ b/css/styles.css
@@ -354,6 +354,10 @@ input[type=submit]:hover {
   article {
     padding: 15px;
   }
+  .seccionUltima img {
+    width: 200px;
+    height: auto;
+  }
   .tituloPlanetas p {
     text-align: justify;
   }
