--- a/css/styles.css
+++ b/css/styles.css
@@ -329,17 +329,28 @@ input[type=submit]:hover {
 @media (max-width: 320px) {
   .introPlanetas, .seccionUltimaPlanetas {
     background-color: whitesmoke;
-    padding: 20px; /* Puedes ajustar el valor de padding según tus necesidades en dispositivos móviles */
+    padding: 15px; /* Puedes ajustar el valor de padding según tus necesidades en dispositivos móviles */
   }
   .introPlanetas p, .seccionUltimaPlanetas p {
     margin: 25px; /* Puedes ajustar el valor de margin según tus necesidades en dispositivos móviles */
     text-align: justify;
+  }
+  .videoBackground {
+    display: none;
   }
 }
 @media (max-width: 768px) {
   .article {
     flex-direction: column;
     align-items: flex-start;
+  }
+  .introPlanetas, .seccionUltimaPlanetas {
+    background-color: whitesmoke;
+    padding: 5px; /* Puedes ajustar el valor de padding según tus necesidades en dispositivos móviles */
+  }
+  .introPlanetas p, .seccionUltimaPlanetas p {
+    margin: 20px; /* Puedes ajustar el valor de margin según tus necesidades en dispositivos móviles */
+    text-align: justify;
   }
   .video-iframe {
     max-width: 100%;
