--- a/Views/nasa.html
+++ b/Views/nasa.html
@@ -86,17 +86,16 @@
         <a href="https://www.nasa.gov/multimedia/videogallery/index.html" target="_blank">Visite aquí</a>
         </div>
       </article>
-      
   </section>
 
   <div class="container mt-5">
     <section class="seccionLogo row align-items-center">
-        <div class="col-md-3 text-center order-md-2" data-aos="flip-left" data-aos-duration="1000">
-            <a href="https://nasa.gov"> <img class="foto-link" src="../Imagenes/NASA_logo.svg.png" alt="LogoNASA" width="150px"> </a>
-        </div>
-        <div class="col-md-5 order-md-1">
-            <h1 class="mb-3">Si quieres saber más sobre la NASA:</h1>
-        </div>
+      <div class="col-md-5 order-md-1">
+        <h1 class="mb-3">Si quieres saber más sobre la NASA:</h1>
+      </div>
+      <div class="col-md-3 text-center order-md-2" data-aos="flip-left" data-aos-duration="1000">
+        <a href="https://nasa.gov"> <img class="foto-link" src="../Imagenes/NASA_logo.svg.png" alt="LogoNASA" width="150px"> </a>
+      </div>
     </section>
   </div>
 
@@ -104,7 +103,7 @@
   <footer class="text-center text-white" style="background-color: rgb(19, 95, 95)">
 
     <div class="container">
-          <!-- Section: Links -->
+          <!-- links -->
       <section class="mt-5">
             
         <div class="row text-center d-flex justify-content-center pt-5">
@@ -144,7 +143,7 @@
     
         <hr class="my-5" />
     
-          <!-- Section: Text -->
+          <!-- texto-->
         <section class="mb-5">
             <div class="row d-flex justify-content-center">
               <div class="col-lg-8">
@@ -158,7 +157,7 @@
         </section>
         
     
-          <!-- Section: Social -->
+          <!-- Seccion social -->
         <section class="text-center mb-5 espacio">
             <a href="https://www.facebook.com/?locale=es_LA" class="text-white" >
               <i class="fab fa-facebook-f svg-white">
