--- a/SCSS/styles.scss
+++ b/SCSS/styles.scss
@@ -320,9 +320,9 @@ $color-1: rgb(219, 177, 59);
   }
 
 
-  //Pagina de curiosidades
+//Pagina de curiosidades
 .video-fondo {
-  margin-right: 15px; /* Espacio entre los videos, puedes ajustar este valor según tus necesidades */
+  margin-right: 15px; 
 }
 
 // Medias Querys
@@ -330,10 +330,10 @@ $color-1: rgb(219, 177, 59);
 @media (max-width: 320px) {
   .introPlanetas, .seccionUltimaPlanetas {
     background-color: whitesmoke;
-    padding: 15px; /* Puedes ajustar el valor de padding según tus necesidades en dispositivos móviles */
+    padding: 15px;
 
     p {
-      margin: 25px; /* Puedes ajustar el valor de margin según tus necesidades en dispositivos móviles */
+      margin: 25px; 
       text-align: justify;
     }
   }
@@ -351,10 +351,10 @@ $color-1: rgb(219, 177, 59);
 
 .introPlanetas, .seccionUltimaPlanetas {
   background-color: whitesmoke;
-  padding: 5px; /* Puedes ajustar el valor de padding según tus necesidades en dispositivos móviles */
+  padding: 5px; 
 
   p {
-    margin: 20px; /* Puedes ajustar el valor de margin según tus necesidades en dispositivos móviles */
+    margin: 20px;
     text-align: justify;
   }
 }
@@ -378,7 +378,7 @@ $color-1: rgb(219, 177, 59);
 
   .seccionUltima{
     img{
-      width: 200px;
+      width: 250px;
       height: auto;
       margin-left: auto !important;
       margin-right: auto !important;
