--- a/Views/contacto.html
+++ b/Views/contacto.html
@@ -80,7 +80,7 @@
   <footer class="text-center text-white" style="background-color: rgb(19, 95, 95)">
 
     <div class="container">
-          <!-- Section: Links -->
+          <!-- links -->
       <section class="mt-5">
             
         <div class="row text-center d-flex justify-content-center pt-5">
@@ -120,7 +120,7 @@
     
         <hr class="my-5" />
     
-          <!-- Section: Text -->
+          <!-- texto-->
         <section class="mb-5">
             <div class="row d-flex justify-content-center">
               <div class="col-lg-8">
@@ -134,7 +134,7 @@
         </section>
         
     
-          <!-- Section: Social -->
+          <!-- social -->
         <section class="text-center mb-5 espacio">
             <a href="https://www.facebook.com/?locale=es_LA" class="text-white" >
               <i class="fab fa-facebook-f svg-white">
