--- a/Views/planetas.html
+++ b/Views/planetas.html
@@ -144,7 +144,7 @@
     <footer class="text-center text-white" style="background-color: rgb(19, 95, 95)">
 
       <div class="container">
-            <!-- Section: Links -->
+            <!-- links paginas -->
         <section class="mt-5">
               
           <div class="row text-center d-flex justify-content-center pt-5">
@@ -184,7 +184,7 @@
       
           <hr class="my-5" />
       
-            <!-- Section: Text -->
+            <!-- texto-->
           <section class="mb-5">
               <div class="row d-flex justify-content-center">
                 <div class="col-lg-8">
@@ -198,7 +198,7 @@
           </section>
           
       
-            <!-- Section: Social -->
+            <!-- Seccon Social -->
           <section class="text-center mb-5 espacio">
               <a href="https://www.facebook.com/?locale=es_LA" class="text-white" >
                 <i class="fab fa-facebook-f svg-white">
