--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -323,16 +322,16 @@ input[type=submit]:hover {
 }
 
 .video-fondo {
-  margin-right: 15px; /* Espacio entre los videos, puedes ajustar este valor según tus necesidades */
+  margin-right: 15px;
 }
 
 @media (max-width: 320px) {
   .introPlanetas, .seccionUltimaPlanetas {
     background-color: whitesmoke;
-    padding: 15px; /* Puedes ajustar el valor de padding según tus necesidades en dispositivos móviles */
+    padding: 15px;
   }
   .introPlanetas p, .seccionUltimaPlanetas p {
-    margin: 25px; /* Puedes ajustar el valor de margin según tus necesidades en dispositivos móviles */
+    margin: 25px;
     text-align: justify;
   }
   .videoBackground {
@@ -346,10 +345,10 @@ input[type=submit]:hover {
   }
   .introPlanetas, .seccionUltimaPlanetas {
     background-color: whitesmoke;
-    padding: 5px; /* Puedes ajustar el valor de padding según tus necesidades en dispositivos móviles */
+    padding: 5px;
   }
   .introPlanetas p, .seccionUltimaPlanetas p {
-    margin: 20px; /* Puedes ajustar el valor de margin según tus necesidades en dispositivos móviles */
+    margin: 20px;
     text-align: justify;
   }
   .video-iframe {
@@ -366,7 +365,7 @@ input[type=submit]:hover {
     padding: 15px;
   }
   .seccionUltima img {
-    width: 200px;
+    width: 250px;
     height: auto;
     margin-left: auto !important;
     margin-right: auto !important;
