arreglo de video por el host

--- a/Views/planetas.html
+++ b/Views/planetas.html
@@ -51,9 +51,14 @@
             Júpiter, Saturno, Urano y Neptuno, son los 8 mundos que componen el sistema solar. </p>
     </section>
 
-    <section class="videoBackground">
-        <video id="backgroundVideo" src="../Imagenes/planets_video.mp4" autoplay="true" loop="true"></video>
+    <section>
+      <img src="../Imagenes/planet.png" alt="planetas" width="100%" > <!-- InfinityFree no permite videos -->
     </section>
+
+
+    <!-- <section class="videoBackground">
+        <video id="backgroundVideo" src="../Imagenes/planets_video.mp4" autoplay="true" loop="true"></video>
+    </section> -->
 
     <section class="introPlanetas">
         <div data-aos="zoom-in">
