--- a/Views/planetas.html
+++ b/Views/planetas.html
@@ -51,7 +51,7 @@
             Júpiter, Saturno, Urano y Neptuno, son los 8 mundos que componen el sistema solar. </p>
     </section>
 
-    <section>
+    <section class="imagenFondo">
       <img src="../Imagenes/planet.png" alt="planetas" width="100%" > <!-- InfinityFree no permite videos -->
     </section>
 
