--- a/Views/contacto.html
+++ b/Views/contacto.html
@@ -18,7 +18,7 @@
   <header class="seccionHeader">
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
-          <a class="navbar-brand animate__animated animate__bounce">Space Wonders</a>
+          <a class="navbar-brand animate__animated animate__bounce" href="../index.html">Space Wonders</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
               </button>
