--- a/Views/planetas.html
+++ b/Views/planetas.html
@@ -18,7 +18,7 @@
     <header class="seccionHeader">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
-                <a class="navbar-brand animate__animated animate__bounce">Space Wonders</a>
+                <a class="navbar-brand animate__animated animate__bounce" href="../index.html">Space Wonders</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -52,10 +52,10 @@
     </section>
 
     <section class="imagenFondo">
-      <img src="../Imagenes/planet.png" alt="planetas" width="100%" > <!-- InfinityFree no permite videos -->
+      <img src="../Imagenes/planet.png" alt="planetas" width="100%" > 
     </section>
 
-
+    <!-- InfinityFree no permite videos -->
     <!-- <section class="videoBackground">
         <video id="backgroundVideo" src="../Imagenes/planets_video.mp4" autoplay="true" loop="true"></video>
     </section> -->
