--- a/Views/planetas.html
+++ b/Views/planetas.html
@@ -56,7 +56,7 @@
     </section>
 
     <section class="introPlanetas">
-        <div data-aos="zoom-in">
+        <div data-aos="zoom-in" data-aos-duration="2000">
         <p>El Sistema Solar se formó hace unos 4670 millones de años a partir de una nube de gas y de polvo que formó la 
             estrella central y un disco circunstelar. La estructura actual de nuestro sistema solar con los planetas rocosos 
             interiores como la Tierra o Marte y la formación de planetas gigantes exteriores como Júpiter o Saturno nos habla 
@@ -82,31 +82,31 @@
         <p>Los cuatro primeros, Mercurio, Venus, La Tierra y Marte, tienen algo en común: todos se sitúan en las órbitas más cercanas al Sol, cuentan con un núcleo metálico en su interior y están conformados por materiales sólidos, por lo que reciben el nombre de planetas rocosos o planetas interiores.</p>
         <p>Por su parte las órbitas de Júpiter, Saturno, Urano y Neptuno se sitúan mucho más lejos del Sol, en la parte exterior del sistema solar, y están conformados en su mayoría por gas, por lo que son conocidos como planetas exteriores o planetas jovianos.</p>
         <div class="grilla">
-            <div data-aos="zoom-in">
+            <div data-aos="zoom-in" data-aos-duration="1300">
                 <img src="../Imagenes/mercury.jpeg" alt="Mercurio">
             </div>
-            <div data-aos="zoom-in">
+            <div data-aos="zoom-in" data-aos-duration="1300">
                 <img src="../Imagenes/venus.jpeg" alt="Venus">
             </div>
-            <div data-aos="zoom-in">
+            <div data-aos="zoom-in" data-aos-duration="1300">
                 <img src="../Imagenes/Earth.jpg" alt="Tierra">
             </div>
-            <div data-aos="zoom-in">
+            <div data-aos="zoom-in" data-aos-duration="1300">
                 <img src="../Imagenes/mars.jpeg" alt="Marte">
             </div>
-            <div data-aos="zoom-in">
+            <div data-aos="zoom-in" data-aos-duration="1300">
                 <img src="../Imagenes/jupiter.jpeg" alt="Jupiter">
             </div>
-            <div data-aos="zoom-in">
+            <div data-aos="zoom-in"data-aos-duration="1300">
                 <img src="../Imagenes/saturn.jpg" alt="Saturno">
             </div>
-            <div data-aos="zoom-in">
+            <div data-aos="zoom-in" data-aos-duration="1300">
                 <img src="../Imagenes/uranus.jpeg" alt="Urano">
             </div>
-            <div data-aos="zoom-in">
+            <div data-aos="zoom-in" data-aos-duration="1300">
                 <img src="../Imagenes/neptune.jpeg" alt="Neptuno">
             </div>
-            <div data-aos="zoom-in">
+            <div data-aos="zoom-in" data-aos-duration="1300">
                 <img src="../Imagenes/pluto.jpeg" alt="Pluton">
             </div>
         </div>
