--- a/SCSS/styles.scss
+++ b/SCSS/styles.scss
@@ -148,10 +148,12 @@ $color-1: rgb(219, 177, 59);
   
 /* pagina Planetas */
 .tituloPlanetas{
+  margin: 30px;
 
   p, h1{
   text-align: center;
-  padding: 10px;
+  padding: 15px;
+  
   }
 }
 
