--- a/css/styles.css
+++ b/css/styles.css
@@ -179,9 +179,12 @@ input[type=submit]:hover {
 }
 
 /* pagina Planetas */
+.tituloPlanetas {
+  margin: 30px;
+}
 .tituloPlanetas p, .tituloPlanetas h1 {
   text-align: center;
-  padding: 10px;
+  padding: 15px;
 }
 
 .introPlanetas {
