--- a/Views/contacto.html
+++ b/Views/contacto.html
@@ -10,6 +10,7 @@
    content="Planetas, NASA, Universo, Space, Universe, Estrellas">
     <title>Space Wonders - Contacto</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/bootstrap.css">
 </head>
@@ -45,36 +46,38 @@
     </nav>
   </header>
 
-  <section class="seccionContacto mt-3">
-    <article>
-      <h1>Contactanos</h1>
-      <form action="#">
-        <div class="form-group">
-          <label for="nombre">Nombre:</label>
-          <input type="text" id="nombre" placeholder="Nombre">
-        </div>
-        <div class="form-group">
-          <label for="apellido">Apellido:</label>
-          <input type="text" id="apellido" placeholder="Apellido">
-        </div>
-        <div class="form-group">
-          <label for="edad">Edad:</label>
-          <input type="number" id="edad" placeholder="Edad">
-        </div>
-        <div class="form-group">
-          <label for="comentarios">Comentarios:</label>
-          <textarea id="comentarios" cols="60" rows="10" placeholder=""></textarea>
-        </div>
-        <div class="form-group">
-          <label>¿Quieres suscribirte a la pagina?:</label>
-          <input type="radio" name="ladoE" value="S">Si
-          <input type="radio" name="ladoE" value="N">No
-        </div>
-        <div class="form-buttons">
-          <input type="submit" value="Enviar">
-        </div>
-      </form>
-    </article>
+  <section class="seccionContacto mt-3 ">
+    <div data-aos="zoom-in" data-aos-duration="1000">
+      <article>
+        <h1>Contactanos</h1>
+        <form action="#">
+          <div class="form-group">
+            <label for="nombre">Nombre:</label>
+            <input type="text" id="nombre" placeholder="Nombre">
+          </div>
+          <div class="form-group">
+            <label for="apellido">Apellido:</label>
+            <input type="text" id="apellido" placeholder="Apellido">
+          </div>
+          <div class="form-group">
+            <label for="edad">Edad:</label>
+            <input type="number" id="edad" placeholder="Edad">
+          </div>
+          <div class="form-group">
+            <label for="comentarios">Comentarios:</label>
+            <textarea id="comentarios" cols="60" rows="10" placeholder=""></textarea>
+          </div>
+          <div class="form-group">
+            <label>¿Quieres suscribirte a la pagina?:</label>
+            <input type="radio" name="ladoE" value="S">Si
+            <input type="radio" name="ladoE" value="N">No
+          </div>
+          <div class="form-buttons">
+            <input type="submit" value="Enviar">
+          </div>
+        </form>
+      </article>
+    </div>
   </section>
 
   <footer class="text-center text-white" style="background-color: rgb(19, 95, 95)">
@@ -195,5 +198,7 @@
   </footer>
  
   <script src="../js/bootstrap.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script> AOS.init(); </script>
 </body>
 </html>
